--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,19 @@ hr.rounded {
   border-radius: 5px;
 }
 
+.col-lg-3
+{
+  margin-bottom: 30px;
+}
+.col-md-4
+{
+  margin-bottom: 30px;
+}
+.col-sm-6
+{
+  margin-bottom: 30px;
+}
+
 .hovereffect {
   width: 100%;
   height: 100%;
