--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,14 @@ body
 
   line-height: 1.5;
   font-size: 3rem;
-  font-family: "Montserrat";
+  font-family: "Ubuntu";
 }
 
 
 .cat
 {
   text-align: center;
+  color: #aaa;
 }
 
 hr.rounded {
@@ -135,3 +136,71 @@ hr.rounded {
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
 }
+
+.carousel-item
+{
+  height: 300px;
+}
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+}
+ul.timeline:before {
+    content: ' ';
+    background: #d4d9df;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+    z-index: 400;
+}
+ul.timeline > li {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+ul.timeline > li:before {
+    content: ' ';
+    background: white;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #22c0e8;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 400;
+}
+.soc
+{
+text-align: center;
+}
+
+.icon
+{
+  color: black;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 2rem;
+}
+
+.card
+{
+  text-align: center;
+}
+
+.modal-title
+{
+  text-align: center;
+}
+
+.login
+{
+  margin-left:10px;
+  padding-right: 1rem;
+}
+
+
+  .btn {
+    margin: 0 0.5rem 1rem;
+  }
